--- a/10_SQLAndHibernate/11_SQLquery/pom.xml
+++ b/10_SQLAndHibernate/11_SQLquery/pom.xml
@@ -21,5 +21,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.12.Final</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.1</version>
+        </dependency>
     </dependencies>
 </project>
