--- a/12_SpringBootWebDevelopment/pom.xml
+++ b/12_SpringBootWebDevelopment/pom.xml
@@ -46,6 +46,13 @@
             <version>5.4.15.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
