--- a/13_NoSQL/pom.xml
+++ b/13_NoSQL/pom.xml
@@ -32,6 +32,15 @@
             <artifactId>jedis</artifactId>
             <version>3.3.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.12.4</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
